Update adjusted scores timestamp and enhance percentile visualization with dynamic scoring user data. The last updated timestamp in adjusted scores has been modified for accuracy, and the HTML now reflects the minimum scoring users dynamically, improving clarity and relevance in the visualization.

--- a/output/percentile-visualization.html
+++ b/output/percentile-visualization.html
@@ -109,7 +109,8 @@
 </head>
 <body>
     <h1>📊 MAL Score Percentiles Over Time</h1>
-    <p class="subtitle">Analyzing score inflation trends (Anime with 25k+ scoring users)</p>
+    <p class="subtitle">Analyzing score inflation trends (Anime with 10,000+ scoring users)</p>
+    <p class="subtitle" style="font-size: 0.9em; color: #999;">Last updated: October 13, 2025</p>
 
     <div class="extension-box">
         <h3>🔧 Install the Browser Extension</h3>
