--- a/output/percentile-visualization.html
+++ b/output/percentile-visualization.html
@@ -110,7 +110,7 @@
 <body>
     <h1>📊 MAL Score Percentiles Over Time</h1>
     <p class="subtitle">Analyzing score inflation trends (Anime with 10,000+ scoring users)</p>
-    <p class="subtitle" style="font-size: 0.9em; color: #999;">Last updated: October 13, 2025</p>
+    <p class="subtitle" style="font-size: 0.9em; color: #999;">Baseline Period: 2005-2013 | Last updated: October 13, 2025</p>
 
     <div class="extension-box">
         <h3>🔧 Install the Browser Extension</h3>
