--- a/output/percentile-visualization.html
+++ b/output/percentile-visualization.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAL Score Percentiles Over Time</title>
+    <title>MyAnimeList Score Adjuster</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <style>
         body {
@@ -108,7 +108,7 @@
     </style>
 </head>
 <body>
-    <h1>📊 MAL Score Percentiles Over Time</h1>
+    <h1>MyAnimeList Score Adjuster</h1>
     <p class="subtitle">Analyzing score inflation trends (Anime with 10,000+ scoring users)</p>
     <p class="subtitle" style="font-size: 0.9em; color: #999;">Baseline Period: 2005-2013 | Last updated: October 13, 2025</p>
 
